[package]
name = "dkg-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aggregatable-dkg = { git = "https://github.com/kobigurk/aggregatable-dkg" }
ark-ff = { version = "^0.2.0", features = [ "std" ] }
ark-ec = { version = "^0.2.0", features = [ "std" ] }
ark-poly = { version = "^0.2.0", features = [ "std" ] }
ark-serialize = { version = "^0.2.0", features = [ "std" ] }
ark-std = { version = "^0.2.0", features = [ "std" ] }
ark-bls12-381 = { version = "^0.2.0", features = [ "std" ] }
thiserror = "1.0.19"
rand = "0.7.3"
rand_chacha = { version = "0.2.1" }
once_cell = "^1.7"
blake2s_simd = "0.5.10"
sha2 = "0.10.2"
bincode = "1.3.3"