[package]
name = "rand-beacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aggregatable-dkg = { git = "https://github.com/kobigurk/aggregatable-dkg" }
aggregatable-dkg = { path = "../aggregatable-dkg" }
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "fs"] }
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0.136", features = ["derive"] } 
serde_json = "1.0"
ark-ff = { version = "^0.2.0", features = [ "std" ] }
ark-ec = { version = "^0.2.0", features = [ "std" ] }
ark-poly = { version = "^0.2.0", features = [ "std" ] }
ark-serialize = { version = "^0.2.0", features = [ "std" ] }
ark-std = { version = "^0.2.0", features = [ "std" ] }
ark-bls12-381 = { version = "^0.2.0", features = [ "std" ] }
thiserror = "1.0.19"
rand = "0.7.3"
rand_chacha = { version = "0.2.1" }
once_cell = "^1.7"
serde_with = { version = "1.10.0"}